lib_LTLIBRARIES = libpsi46BasePixel.la

# Program source declarations
libpsi46BasePixel_la_SOURCES = CalibrationTable.cc \
							DACParameters.cc \
							DecoderCalibration.cc \
							Keithley.cc \
							psi46_tb.cc \
							RawPacketDecoder.cc \
							SysCommand.cc \
							TBAnalogParameters.cc \
							TBInterface.cc \
							TBM.cc \
							TBMParameters.cc \
							TBParameters.cc \
							remotecalls_chiptest.inc \
							remotecalls.inc \
							remotecalls_modultest.inc \
							remotecalls_xraytest.inc \
							Keithley6487.cc \
							serialstream.cc \
							Keithley237.cc \
							Keithley237Internals.cc \
							GpibStream.cc \
							BaseConfig.cc \
							VoltageSourceFactory.cc \
							ThreadSafeVoltageSource.cc \
							PsiCommon.cc \
							AnalogTestBoard.cc
libpsi46BasePixel_la_CPPFLAGS = -I$(srcdir)/..

noinst_HEADERS = CalibrationTable.h \
		 ConfigParameters.h \
		 DACParameters.h \
		 DecodedReadout.h \
		 DecoderCalibration.h \
		 Keithley.h \
		 psi46_tb.h \
		 RawPacketDecoder.h \
		 SysCommand.h \
		 TBAnalogInterface.h \
		 TBAnalogParameters.h \
		 TBInterface.h \
		 TBM.h \
		 TBMParameters.h \
		 TBParameters.h
