lib_LTLIBRARIES = libpsi46BasePixel.la

# Program source declarations
libpsi46BasePixel_la_SOURCES = \
							CalibrationTable.cc \
							DACParameters.cc \
							DecoderCalibration.cc \
							psi46_tb.cc \
							RawPacketDecoder.cc \
							TBAnalogParameters.cc \
							TBInterface.cc \
							TBM.cc \
							TBMParameters.cc \
							TBParameters.cc \
							BaseConfig.cc \
							VoltageSourceFactory.cc \
							AnalogTestBoard.cc

