lib_LTLIBRARIES = libpsi46tests.la

libpsi46tests_la_SOURCES = \
							AddressDecoding.cc \
			                AddressLevels.cc \
			                AnalogReadout.cc \
			                BumpBonding.cc \
			                CalDelay.cc \
			                ChipVariation.cc \
							ChipStartup.cc \
			                DacDependency.cc \
			                DacOverview.cc \
			                FigureOfMerit.cc \
			                FullTest.cc \
			                IVCurve.cc \
			                OffsetOptimization.cc \
			                PHCalibration.cc \
			                PhDacOverview.cc \
			                PhDacScan.cc \
			                PhNoise.cc \
			                PHRange.cc \
			                PHTest.cc \
			                PixelAlive.cc \
			                SCurveTestBeam.cc \
			                SCurveTest.cc \
			                TBMTest.cc \
			                TBMUbCheck.cc \
			                TemperatureCalibration.cc \
			                TemperatureTest.cc \
							DacProgramming.cc \
			                ThrComp.cc \
			                ThresholdTest.cc \
			                TimeWalkStudy.cc \
			                TrimBits.cc \
			                Trim.cc \
			                TrimLow.cc \
			                TrimVcal.cc \
			                UbCheck.cc \
			                VhldDelOptimization.cc \
			                VsfOptimization.cc \
			                VsfScan.cc \
			                Xray.cc \
			                BareTest.cc
